Updated dependencies and modified Navbar styles

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,7 +1,7 @@
 /* Navbar Styling */
 .navbar {
   background-color: #f1d2d2 !important;
-  position: fixed;
+  /* position: fixed; */
 }
 
 .navbar-brand {
